Bug 435525 - Setting viewBox to empty string on a referenced SVG document from script does not cause an update. r+sr=roc